# llmfrontend

./: .gitignore  Cargo.toml  package-lock.json  package.json  vercel.json
api/: health.rs  hello.rs
app/: .env.development  .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.vue  apiBase.ts  apiJson.ts  style.css  vite-env.d.ts
app/src/components/: Home.vue  LlmWorkbench.vue
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.vue
