[package]
name = "vercel-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
vercel_runtime = "2"

[[bin]]
name = "hello"
path = "api/hello.rs"

[[bin]]
name = "health"
path = "api/health.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
